tests/baselines/reference/importAssertion2(module=commonjs).errors.txt
1.ts(1,22): error TS1008: The 'assert' keyword in import attributes is deprecated and has been replaced by the 'with' keyword.
1.ts(1,22): error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
1.ts(2,28): error TS1008: The 'assert' keyword in import attributes is deprecated and has been replaced by the 'with' keyword.
1.ts(2,28): error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
1.ts(3,21): error TS1008: The 'assert' keyword in import attributes is deprecated and has been replaced by the 'with' keyword.
1.ts(3,21): error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
1.ts(4,27): error TS1008: The 'assert' keyword in import attributes is deprecated and has been replaced by the 'with' keyword.
1.ts(4,27): error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
2.ts(1,28): error TS1008: The 'assert' keyword in import attributes is deprecated and has been replaced by the 'with' keyword.
2.ts(1,28): error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
2.ts(2,38): error TS1008: The 'assert' keyword in import attributes is deprecated and has been replaced by the 'with' keyword.
2.ts(2,38): error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.


==== 0.ts (0 errors) ====
    export const a = 1;
    export const b = 2;
    
==== 1.ts (8 errors) ====
    export {} from './0' assert { type: "json" }
                         ~~~~~~
!!! error TS1008: The 'assert' keyword in import attributes is deprecated and has been replaced by the 'with' keyword.
                         ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
    export { a, b } from './0' assert { type: "json" }
                               ~~~~~~
!!! error TS1008: The 'assert' keyword in import attributes is deprecated and has been replaced by the 'with' keyword.
                               ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
    export * from './0' assert { type: "json" }
                        ~~~~~~
!!! error TS1008: The 'assert' keyword in import attributes is deprecated and has been replaced by the 'with' keyword.
                        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
    export * as ns from './0' assert { type: "json" }
                              ~~~~~~
!!! error TS1008: The 'assert' keyword in import attributes is deprecated and has been replaced by the 'with' keyword.
                              ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
    
==== 2.ts (4 errors) ====
    export { a, b } from './0' assert {}
                               ~~~~~~
!!! error TS1008: The 'assert' keyword in import attributes is deprecated and has been replaced by the 'with' keyword.
                               ~~~~~~~~~
!!! error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
    export { a as c, b as d } from './0' assert { a: "a", b: "b", c: "c" }
                                         ~~~~~~
!!! error TS1008: The 'assert' keyword in import attributes is deprecated and has been replaced by the 'with' keyword.
                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2821: Import assertions are only supported when the '--module' option is set to 'esnext' or 'nodenext'.
    